# personal-infra

./: .terraform.lock.hcl  main.tf  pyproject.toml  web_server_bootstrap.sh
.github/: dependabot.yml
libexec/: replace_netlify_dns_record.py
